# kinojecture-qt

./: .gitignore  .leaderboard_backup.db  CMakeLists-unit.txt  CMakeLists.txt  LICENSE  README.md  main.cpp
.data/: leaderboard.db
.data/parameters/: game_parameters.json  player_data.json
.helper_src/code/: helper.cpp  helper.h
.helper_src/data/: name.basics_2.tsv  title.crew_2.tsv  title.principals_3.tsv  title.ratings_2.tsv
.helper_src/planning/: db_plan.md
controller/: controller.cpp  controller.h  game_controller.cpp  game_controller.h  leaderboard_controller.cpp  leaderboard_controller.h  movie_controller.cpp  movie_controller.h  people_controller.cpp  people_controller.h  settings_controller.cpp  settings_controller.h
data/: other.db
data/parameters/: game_parameters.json  player_data.json
db_code/: cinema_db.cpp  cinema_db.h  db_func.h  leaderboard.cpp  leaderboard.h  leaderboard_unit.cpp
docs/: CMakeLists.txt
documentation/dev/tutorials/: new-feature.md
game_logic/: game_model.cpp  game_model.h  game_model_test.cpp  model.cpp  model.h  params_model.cpp  params_model.h  params_model_test.cpp  proxy_model.cpp  proxy_model.h  proxy_model_test.cpp  selection_model.cpp  selection_model.h  selection_model_test.cpp  settings_model.cpp  settings_model.h
helper_src/code/: db_creator.h  helper.cpp  helper.h
helper_src/data/: title.basics_2.tsv
helper_src/planning/: db_viz.md
qt/: base_window.cpp  base_window.h  base_window.ui  base_window.ui.autosave  hoverpushbutton.cpp  hoverpushbutton.h
resources/: kj_icon_test.rc  player_data.json
